<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Educards</string>
    <string name="search">Пошук</string>
    <string name="login">Вхід</string>
    <string name="user_name">Ім’я користувача /Email</string>
    <string name="user_name1">Nickname</string>
    <string name="choose_name">Оберіть мову</string>
    <string name="password">Пароль</string>
    <string name="continuee">Продовжити</string>
    <string name="data_proces">Натискаючи кнопку «Продовжити», ви погоджуєтеся на обробку персональних даних</string>
    <string name="havent_acc">Ще не маєте акаунту? Створіть його</string>
    <string name="sign_up">Реєстрація</string>
    <string name="log_in">Вхід</string>
    <string name="name_usr">Ім’я користувача</string>
    <string name="gmail_us">Email</string>
    <string name="have_acc">Вже маєте акаунт? Ввійдіть в нього</string>
    <string name="my_prof">Мій профіль</string>
    <string name="choose_myself">Змінити фото</string>
    <string name="stand_avat">Обрати стандартну</string>
    <string name="enter">ввести</string>
    <string name="start_study">Як почати навчання?</string>
    <string name="info_start_study">Довідка</string>
    <string name="sets_of_cards">Набори карток</string>
    <string name="name_set_card">Назва набору карток</string>
    <string name="name">НАЗВА</string>
    <string name="accomplishment">Досягнення</string>
    <string name="start">Почати</string>
    <string name="cards">Картки</string>
    <string name="tests">Тести</string>
    <string name="selected_cards">Обрані картки</string>
    <string name="concept">Поняття</string>
    <string name="explanation">Пояснення</string>
    <string name="example_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet faucibus diam.
        Sed vestibulum massa sit amet dolor viverra iaculis. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
        per inceptos himenaeos. </string>
    <string name="selected">Обрані</string>
    <string name="theme">Тема</string>
    <string name="text">Текст</string>
    <string name="know">Знаю</string>
    <string name="idk">Не знаю</string>
    <string name="hesitate">Вагаюсь</string>
    <string name="quest_truefalse">Чи правильне твердження нижче?</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>
    <string name="quest_variants">Якому поясненню відповідає поняття нижче?</string>
    <string name="your_answer">Введіть свою відповідь</string>
    <string name="result">Підсумок</string>
    <string name="create_set">Створення набору карток</string>
    <string name="set_without_name">Набір карток без імені</string>
    <string name="description">Опис</string>
    <string name="result_test">Підсумок тесту</string>
    <string name="todo">TODO</string>
    <string name="start_cards">Розпочати вивчення</string>
    <string name="button_account">Акаунта</string>
    <string name="button_search">Пошуку</string>
    <string name="button_messages">Сповіщення</string>
    <string name="button_forward">Вперед</string>
    <string name="button_back">Назад</string>
    <string name="button_avat1">Аватар 1</string>
    <string name="button_avat2">Аватар 2</string>
    <string name="button_avat3">Аватар 3</string>
    <string name="button_avat4">Аватар 4</string>
    <string name="button_avat_my_photo">Фото</string>
    <string name="button_create_card">Створити</string>
    <string name="button_show">Показати</string>
    <string name="Language">Мова</string>
    <string name="Language_ua">українська</string>
    <string name="Language_ru">русский</string>
    <string name="Language_en">English</string>
    <string name="save">Зберегти</string>
</resources>