<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_background">

    <ImageButton
        android:layout_width="41dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/button_account"
        android:src="@drawable/ic_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="275dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserratsemibold"
        android:text="@string/name_set_card"
        android:textAlignment="center"
        android:textColor="@color/white_title"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratsemibold"
        android:text="@string/quest_truefalse"
        android:textAlignment="center"
        android:textColor="@color/clean_white"
        android:textSize="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="136dp"/>

    <ImageButton
        android:id="@+id/messages"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <View
        android:layout_width="412dp"
        android:layout_height="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/ic_wave_test_truefalse">
    </View>

    <ImageButton
        android:contentDescription="@string/button_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_left_back_pas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="48dp"/>

    <ImageButton
        android:contentDescription="@string/button_forward"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="48dp"
        android:src="@drawable/ic_right_back_act"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:background="@drawable/rounded_grey_button"
            android:backgroundTint="@color/grey"
            android:fontFamily="@font/montserratsemibold"
            android:text="@string/concept"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="52dp"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:background="@drawable/rounded_grey_button"
            android:backgroundTint="@color/grey"
            android:fontFamily="@font/montserratsemibold"
            android:text="@string/explanation"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="196dp">

        <Button
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_grey_button"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/nunitosemibold"
            android:text="@string/yes"
            android:gravity="center"
            android:textColor="@color/clean_white"
            android:textSize="20dp"/>

        <Button
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/rounded_grey_button"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/nunitosemibold"
            android:text="@string/no"
            android:gravity="center"
            android:textColor="@color/clean_white"
            android:textSize="20dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>