<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_blue"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name_app"
        android:layout_width="140dp"
        android:layout_height="36dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/otomanopee"
        android:text="@string/app_name"
        android:textColor="@color/white_title"
        android:textSize="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name" />

    <TextView
        android:id="@+id/text_entry"
        android:layout_width="240dp"
        android:layout_height="52dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/montserratsemibold"
        android:text="@string/sign_up"
        android:textColor="@color/white_title"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_app"
        tools:text="@string/sign_up" />

    <LinearLayout
        android:id="@+id/data_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_entry">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/shape_rounded_fortext"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/name_usr"
                android:textColor="@color/white_grey"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/shape_rounded_fortext"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/gmail_us"
                android:textColor="@color/white_grey"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_rounded_fortext"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:text="@string/choose_name"
                android:fontFamily="@font/montserratsemibold"
                android:textColor="@color/white_grey"
                android:textSize="17dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="163dp"
                android:layout_marginTop="18dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_triangle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_rounded_fortext"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:text="@string/password"
                android:fontFamily="@font/montserratsemibold"
                android:textColor="@color/white_grey"
                android:textSize="17dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="215dp"
                android:layout_marginTop="18dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_pass" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/button_cont"
        android:layout_width="350dp"
        android:layout_height="46dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/ic_button_continue"
        android:backgroundTint="@color/main_yellow"
        android:fontFamily="@font/montserratsemibold"
        android:gravity="center"
        android:text="@string/continuee"
        android:textAllCaps="false"
        android:textColor="@color/grey_text"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_login" />

    <TextView
        android:layout_width="226dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserratsemibold"
        android:text="@string/data_proces"
        android:textAlignment="center"
        android:textColor="@color/clean_white"
        android:textSize="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_cont" />

    <TextView
        android:layout_width="127dp"
        android:layout_height="27dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="90dp"
        android:text="@string/have_acc"
        android:textAlignment="center"
        android:textColor="@color/clean_white"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_sign"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="82dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/log_in"
        android:gravity="center"
        android:fontFamily="@font/montserratsemibold"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:background="@drawable/ic_button_continue"
        android:backgroundTint="@color/main_yellow"
        android:textColor="@color/grey_text"/>



</androidx.constraintlayout.widget.ConstraintLayout>