<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_blue">

    <ImageButton
        android:layout_width="41dp"
        android:layout_height="40dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_account"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp"
        app:layout_constraintStart_toStartOf="20dp"
        app:layout_constraintTop_toTopOf="20dp"/>

    <TextView
        android:layout_width="275dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserratsemibold"
        android:text="@string/name_set_card"
        android:textAlignment="center"
        android:textColor="@color/white_title"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/messages"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_back"
        tools:layout_editor_absoluteX="351dp"
        tools:layout_editor_absoluteY="20dp"
        app:layout_constraintStart_toStartOf="351dp"
        app:layout_constraintTop_toTopOf="20dp" />

    <View
        android:layout_width="412dp"
        android:layout_height="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/ic_wave_cards">
    </View>

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/todo"
        android:layout_marginStart="4dp"
        android:layout_marginTop="460dp"
        android:src="@drawable/ic_left_back_pas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/todo"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/ic_right_back_act"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="224dp"
        android:layout_height="344dp"
        android:background="@drawable/rounded_grey_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/montserratsemibold"
        android:text="@string/text"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:gravity="center"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="196dp">

        <Button
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_grey_button"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/nunitosemibold"
            android:text="@string/know"
            android:gravity="center"
            android:textColor="@color/clean_white"
            android:textSize="20dp"/>

        <Button
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/rounded_grey_button"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/nunitosemibold"
            android:text="@string/idk"
            android:gravity="center"
            android:textColor="@color/clean_white"
            android:textSize="20dp"/>

    </LinearLayout>

    <Button
        android:layout_width="140dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="128dp"
        android:background="@drawable/rounded_grey_button"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/nunitosemibold"
        android:text="@string/hesitate"
        android:gravity="center"
        android:textColor="@color/clean_white"
        android:textSize="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>