<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_background">

    <ImageButton
        android:id="@+id/account"
        android:layout_width="41dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/button_account"
        android:src="@drawable/ic_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="275dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserratsemibold"
        android:text="@string/name_set_card"
        android:textAlignment="center"
        android:textColor="@color/white_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratsemibold"
        android:text="@string/quest_variants"
        android:textAlignment="center"
        android:textColor="@color/clean_white"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="136dp"/>

    <ImageButton
        android:id="@+id/messages"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <View
        android:layout_width="412dp"
        android:layout_height="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/ic_wave_test_variants">
    </View>

    <ImageButton
        android:id="@+id/back"
        android:contentDescription="@string/button_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_left_back_pas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="48dp"/>

    <ImageButton
        android:id="@+id/next"
        android:contentDescription="@string/button_forward"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="48dp"
        android:src="@drawable/ic_right_back_act"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:background="@drawable/rounded_grey_button"
            android:backgroundTint="@color/grey"
            android:fontFamily="@font/montserratsemibold"
            android:text="@string/concept"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="52dp"/>


        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="2">

            <TextView
                android:layout_width="160dp"
                android:layout_height="70dp"
                android:background="@drawable/rounded_grey_button"
                android:backgroundTint="@color/grey"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/explanation"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="160dp"
                android:layout_height="70dp"
                android:background="@drawable/rounded_grey_button"
                android:backgroundTint="@color/grey"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/explanation"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="160dp"
                android:layout_height="70dp"
                android:background="@drawable/rounded_grey_button"
                android:backgroundTint="@color/grey"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/explanation"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="160dp"
                android:layout_height="70dp"
                android:background="@drawable/rounded_grey_button"
                android:backgroundTint="@color/grey"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/explanation"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_margin="10dp"/>

        </GridLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>